# crc-runner

./: .gitignore  Justfile  Makefile  README.md  TODO.md  __main__.py  crc-runner.spec  crc-system.service  crc-user.service  crc.service  pyproject.toml  tasks.py
crc_runner/: __main__.py  async_helpers.py  crc.py  dbus.py  log.py  system.py  systemd.py  user.py
crc_runner/async_helpers/: __init__.py  cancellation.py  conv.py  events.py  signal_handling.py
crc_systemd/: __main__.py  async_helpers.py  crc.py  dbus.py  system.py  systemd.py  user.py
systemd/: crc-log.service  crc-system.service  crc-user.service  local-file-dropin.conf
