[project]
name = "crc-runner"
version = "0.0.1"
description = "A monitor for OpenShift Local"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dbus-next",
    "systemd"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["crc_runner"]