[project]
name = "crc-runner"
version = "0.0.1"
description = "A monitor for OpenShift Local"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dbus-next",
    "systemd"
]

[project.scripts]
crc-runner = "crc_runner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["crc_runner"]